# coding-holiday

./: CMakeLists.txt  README.md
lift-simulation/: go.mod  main.go
lift-simulation/helpers/: helper.go
lift-simulation/storage/: storage.go
lift-simulation/views/: views.go
linkedlist/: CMakeLists.txt  main.cpp
linkedlist/include/: helper.h  program.h
linkedlist/model/: servis_model.h
linkedlist/src/: helper.cpp
linkedlist/storage/: option_storage.h  servis_storage.h
linkedlist/view/: program.cpp
minggu-01/: Makefile  main.cpp
minggu-01/database/: db_admin.h  option.h
minggu-01/include/: utils.h
minggu-01/model/: model_admin.h
minggu-01/src/: utils.cpp
minggu-01/view/: view_admin.h
minggu-02/: Makefile  main  main.cpp
minggu-02/database/: database_mahasiswa.h
minggu-02/include/: utils.h
minggu-02/src/: utils.cpp
minggu-03/: Makefile  soal1.cpp  soal2.cpp  soal3.cpp  soal4.cpp  soal5.cpp  soal6.cpp  soal7.cpp
minggu-03/include/: utils.h
